# ace-semantic-gateway

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
ace_semantic_gateway.egg-info/: PKG-INFO  SOURCES.txt
context_matrix/: build_factual_matrix.py  build_matrix.py  evaluate_dual.py  evaluate_sentence.py  factual_prototypes.py  prototypes.py
docs/: ACE_MATH_APPENDIX.md  ACE_THEORY.md  ARCHITECTURE.md  CITATION.cff  FORMAL_NOTES.md  GETTING_STARTED.md  INDEX.md  RESEARCH_NOTES.md  SCIENTIFIC_POSITION.md
examples/: basic_gateway_demo.py  context_demo.py  gateway_context_demo.py
gateway/: __init__.py  __main__.py  ace_layer.py  context_field.py  context_matrix.py  gateway.py
tests/: test_context_matrix.py  test_gateway.py
