[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ace-semantic-gateway"
version = "0.2.0"
description = "Pre-prompt semantic control for language models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Ernesto Rosati Beristain" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0"
]

[tool.setuptools]
packages = ["gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
